--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
+# Created by https://www.gitignore.io/api/jekyll,sass
+
+### Jekyll ###
 _site/
 .sass-cache/
+.jekyll-metadata
+
+
+### Sass ###
+.sass-cache/
+*.css.map
